Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55836

Changing QCuboidMesh y or z extents breaks the mesh up

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.7.1
    • 5.7
    • Qt3D
    • None

      Changing QCuboidMesh y or z extents breaks the mesh up by incorrectly extending two opposite sides of the cuboid. Probably y and z coordinates are swapped somewhere.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes