Fix non-symmetric extents and resolutions for QCuboidMesh

Task-number: QTBUG-55836
Change-Id: Ic5ee72f5ffb236fe15e46fa667159a139ad05b03
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>